trunk/core-bc/modules/theme/src/main/webapp/css/custom.css
/* ... */
.account-settings-portlet td {
    padding: 15px 30px 0px 10px;
    vertical-align: bottom;
}

.account-settings-portlet .tab-content {
    position: absolute;
}

.account-settings-portlet #tab-content-container {
    height: 250px;
    padding: 10px;
}

.account-settings-portlet input[type="text"] {
    width: 200px;
}

.account-settings-portlet .account-settings-form {
    height: 25px;
    text-align: center;
}

.account-settings-portlet .tab-selector {
    height: 22px;
    text-align: center;
}

.account-settings-portlet .tab-selector a {
    float: left;
    height: 100%;
    margin: 4px;
    width: 31%;
    background-color: #06579c;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    border: 1px solid #75A1C6;
    border-bottom: 0;
    font-family: Ubuntu, Arial, Verdana, Helvetica, sans-serif;
    font-size: 15px;
    font-weight: normal;
    color: white;
    text-decoration: none;
}

.account-settings-portlet .tab-selector a.selected {
    background-color: white;
    color: #06579C;
    cursor: default;
}

/* --------------- Change Password Portlet ---------------------*/

.change-password-portlet .change-password-form div {
    margin-top: 10px;
}

.change-password-portlet .user-box-container {
    margin-bottom: 12px;
    font-size: 1.2em;
}

.change-password-portlet .user-box-container .user-box {
    border: 1px solid lightgray;
    padding: 6px;
}

.change-password-portlet .user-box-container .user-box .user-id {
    font-weight: bold;
}

/* ---------------- dental grant portlet ------------------ */
.dental-grant-wrap table.search-result td, table.search-result th {
    padding-right: 15px;
    border-bottom: gray solid thin;
}

.dental-grant-wrap table.search-result {
    width: 95%;
}

.dental-grant-wrap table td {
    padding: 8px 15px 0px 0px;
    height: 23px;
}

.dental-grant-wrap fieldset {
    margin: 8px 0px;
}

.dental-grant-wrap .hover-option {
    background-color: #add8e6;
    cursor: pointer;
}

.dental-grant-wrap #optionList {
    overflow-y: scroll;
    max-height: 500px;
    overflow-x: hidden;
}

.dental-grant-confirmation-wrap table td {
    padding: 3px;
}

/* ---------------- ifeed portlet ------------------------- */

.ifeed-portlet .ifeed-portlet-ldap-people .aui-combobox-content .aui-field-content {
    display: block;
}

.ifeed-portlet .results-grid a.taglib-icon span {
	font-size: 0;
	text-indent: -9999em;
	visibility: hidden;
}

.ifeed-portlet .ifeed-search-list .title-wrap {
	max-width: 175px;
	word-wrap: break-word;
}

/* hide button */ 
.ifeed-portlet .ifeed-portlet-ldap-people .aui-toolbar {
    display: none;    
}

.ifeed-portlet .ifeed-portlet-filter-input input { 
    width: 96%;
    margin: 0px auto;
}

.ifeed-portlet-filter-result {
    margin: 0px;
    padding: 4px;
    cursor: pointer;
}

.ifeed-portlet-filter-result-odd {
    background-color: #fafafa;
}


.ifeed-portlet .filter-type {
	margin: 10px 0;
}

.ifeed-portlet .filter-type h4.label {
	color: #333;
	font-size: 1.1em;
	margin: 0 0 5px 0;
}


/* Choose filters */

.ifeed-portlet ul.filter-criteria-list {
	list-style: none;
	margin: 0 0 0 10px;
	padding: 0;
}

.ifeed-portlet ul.filter-criteria-list li {
	margin: 5px 0;
	padding: 0;
}

.ifeed-portlet .criteria-help {
	background: transparent url(../images/common/help.png) 0 0 no-repeat;
	cursor: pointer;
	float: left;
	font-size: 0;
	height: 16px;
	text-indent: -9999em;
	width: 16px;
}

.ifeed-portlet .criteria-label {
	margin-left: 20px;
}

.ifeed-portlet .criteria-label a.criteria-add {
	background: transparent url(../images/common/add.png) 0 0 no-repeat;
	color: #333;
	display: block;
	margin: 0;
	padding: 0 0 0 20px;
	text-decoration: none;
}

.ifeed-portlet .criteria-label a.criteria-add:hover {
	text-decoration: underline;
}

.aui-autocomplete-selected .ifeed-portlet-filter-result-odd {
    background-color: #DFE8F6;
}


/* Applied filters */

ul.ifeed-applied-filters-list {
	list-style: none;
	margin: 0;
	padding: 0;
}

ul.ifeed-applied-filters-list li {
	margin: 7px 0;
	padding: 0;
}

.ifeed-applied-filter {
	margin: 0 60px 0 0;
}

.ifeed-applied-filter .ifeed-label,
.ifeed-applied-filter .ifeed-value {
	display: block;
	font-weight: normal;
	font-variant: normal;
	overflow-wrap: break-word;
	word-wrap: break-word;
}

.ifeed-applied-filter .ifeed-label {
	color: #555;
	font-weight: bold;
}

.ifeed-applied-filter-tools {
	float: right;
	width: 60px;
}

/* JSONP form */

.ifeed-jspon-container {}

.ifeed-jspon-container .lfr-panel-titlebar .lfr-panel-title {
	padding: 0 5px;
}

.ifeed-jspon-container .lfr-panel-content {
	padding: 10px;
}

.ifeed-jsonp-settings .lfr-panel-content {
	max-width: 700px;
}


.ifeed-jspon-container .aui-field-wrapper {}

/* Clearfix style clearing */

.ifeed-jspon-container .aui-field-wrapper-content:after{clear:both;content:'.';display:block;visibility:hidden;height:0}
.ifeed-jspon-container .aui-field-wrapper-content{display:inline-block}
* html .ifeed-jspon-container .aui-field-wrapper-content{height:1%}
.ifeed-jspon-container .aui-field-wrapper-content{display:block}


.ifeed-jsonp-settings .aui-field-multi,
.ifeed-jsonp-settings .aui-field-text,
.ifeed-jsonp-settings .aui-field-select {
	display: block;
	float: left;
	max-width: 500px;
	width: 49.9%;
}

.ifeed-jsonp-settings .aui-field-help {
	display: block;
	float: left;
	margin-left: 4%;
	width: 45.9%;
}

.ifeed-jsonp-settings .aui-field label,
.ifeed-jsonp-settings .aui-field .aui-field-multi-element,
.ifeed-jsonp-settings .aui-field .aui-field-element {
	display: block;
	float: left;
	width: 49.9%;
}

.ifeed-jsonp-settings .aui-field .aui-field-multi-element .aui-field-text,
.ifeed-jsonp-settings .aui-field .aui-field-multi-element .aui-field-select,
.ifeed-jsonp-settings .aui-field .aui-field-multi-element .aui-field-element {
	float: none;
	max-width: auto;
	width: 100%;
}

.ifeed-jsonp-settings .aui-field-content {
	display: block;
}
/* ... */

